buildscript {
	repositories {
		mavenLocal()
		mavenCentral()
		google()
		maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
		jcenter()
	}
	dependencies {

	}
}

allprojects {
	apply plugin: 'eclipse'
	apply plugin: 'idea'
}

configure(subprojects) {
	apply plugin: 'java-library'
	sourceCompatibility = 8.0
	compileJava {
		options.incremental = true
	}
}

subprojects {
	version = '0.0.1-SNAPSHOT'
	ext.appName = 'Chelonia'
	repositories {
		mavenLocal()
		mavenCentral()
		maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
		maven { url 'https://jitpack.io' }
		jcenter()
	}
}

// Clearing Eclipse project data in root folder:
tasks.eclipse.doLast {
	delete '.project'
	delete '.classpath'
	delete '.settings/'
}
